    . Create and install a meta header file in
      visp3/<module>/visp_<module>.h
  - Bug fixed
    . [#37] How to build for ios? build failed
    . [#38] Wrong urls in visp/doc/tutorial-calibration.doc
    . [#39] Meta header files visp_<module>.h not installed
    . [#40] vpKeyPoint fails to R/W database on big endian arch
    . [#42] Fails to build on Fedora 23 with Coin3-devel

----------------------------------------------
ViSP 3.0.0 (released December 18th, 2015)
  - New features
    . Compatibility with Windows 8.1 and 10
    . Compatibility with Microsoft Visual C++ 2015 (MSCV 14)
    . Compatibility with Odroid XU4
    . Source code migrates to GitHub: http://github.org/lagadic/visp
    . Introduce Travis continuous integration
    . New website: http://visp.inria.fr
    . Reorganize source in modules (core, vision, mbt, tt, …) with a library
      per module named libvisp_<module>. Keep compat with previous releases.
    . Allow to link contributions to ViSP source code using
      VISP_CONTRIB_MODULES_PATH CMake var;
      see http://github.org/lagadic/visp_contrib
    . Model-based tracker:
      + New visibility tests based on the scanline rendering algorithm.
      + Improve Ogre3D visibility tests in order to use it in a probalistic
        approach via the setNbRayCastingAttemptsForVisibility()
        and setGoodNbRayCastingAttemptsRatio() functions.
      + Introduction of cylinder tracking with the model-based trackers using
        key points.
      + Improve the setPose() functionnality to use the given pose as a
        prediction of the key points position while using vpMbKltTracker and
        vpMbEdgeKltTracker.
    . Introduce vpArray2D template class that is inherited by all matrices and
      vectors.
    . vpKeyPoint class:
      + Full code compatibility with OpenCV 3.0.
      + Add support to the new Features introduce in OpenCV 3.0 and contrib
        module releases.